# comment-extract

./: Cargo.toml  README.md
src/: doc_traits.rs  main.rs  repr.rs  segment.rs  utils.rs
